# grimoire-combat-helper

./: .gitignore  PRD.md
.github/workflows/: deploy.yml
grimoire-tool/: generate_images.py  pull_legendary.py  pyproject.toml  reset.py  update_json.py
grimoire-tool/grimoire/: grimoire.json  schema.json
grimoire-tool/grimoire_tool/: __init__.py  cli.py  difficulty.py  loader.py  models.py  presenter.py  selector.py
grimoire-tool/tests/: test_difficulty.py  test_loader.py  test_selector.py
grimoire-web/: index.html  package-lock.json  package.json  vite.config.ts
grimoire-web/public/: grimoire.json
grimoire-web/public/images/: README.md
grimoire-web/src/: App.tsx  index.css
grimoire-web/src/components/: CombatTurn.tsx  Header.tsx  MonsterCard.tsx  MonsterPicker.tsx
grimoire-web/src/lib/: difficulty.ts  models.ts  selector.ts
