[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire_tool"
version = "0.2.0"
description = "Grimoire Combat Helper for D&D 5e"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
